--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 DirectGrav
 
+[![Build Status](https://travis-ci.com/saliei/DirectGrav.svg?branch=main)](https://travis-ci.com/saliei/DirectGrav)
+
 Direct Nbody gravitational simulations in GPU
 
 
