--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 DirectGrav
 
-[Build Status](https://travis-ci.com/saliei/DirectGrav.svg?branch=main)](https://travis-ci.com/saliei/DirectGrav)
+[![Build Status](https://travis-ci.com/saliei/DirectGrav.svg?branch=main)](https://travis-ci.com/saliei/DirectGrav)
 
 Direct Nbody gravitational simulations in GPU
 
